--- a/src/components/Layout/layout.css
+++ b/src/components/Layout/layout.css
@@ -2,18 +2,16 @@
 }
 .layout {
   padding: 15px;
+  width: calc(100vw - (100vw - 100%));
 }
 @media screen and (max-width: 768px) {
   .layout {
-    padding: 10px;
+    padding-left: 5px;
+    padding-right: 5px;
+    width: 100vw;
+    height: 100vh;
   }
   .certificate_component {
     display: none;
   }
-}
-
-.layout {
-  width: 100vw;
-  height: 100vh;
-  width: calc(100vw - (100vw - 100%));
 }
