--- a/src/components/navigation_bar/nav_bar.css
+++ b/src/components/navigation_bar/nav_bar.css
@@ -8,32 +8,85 @@
     justify-content: space-evenly;
     text-decoration: none;
   }
-}
-@media screen and (max-width: 768px) {
-  nav * {
-    display: inline-block;
-    height: 100%;
-    font-size: 3vw;
-    padding-left: 5px;
-    padding-right: 5px;
-    justify-content: space-evenly;
-    text-decoration: none;
+  .nav_bar_sidebar {
+    display: none;
+  }
+  nav {
+    position: fixed;
+    top: 0;
+    z-index: 99;
+    right: 0;
+    left: 0;
+    text-align: center;
+    background-color: black;
+    opacity: 0.7;
+  }
+  nav a:link {
+    color: white;
+  }
+  nav a:visited {
+    color: white;
   }
 }
-nav {
-  position: fixed;
-  top: 0;
-  z-index: 99;
-  right: 0;
-  left: 0;
-  text-align: center;
-  background-color: black;
-  opacity: 0.7;
-}
+@media screen and (max-width: 768px) {
+  nav {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 6;
+    left: 0;
+    text-align: left;
+    background-color: rgb(163, 212, 212);
+    opacity: 1;
+  }
+  .nav_bar_header {
+    display: none;
+  }
+  nav .sidebar_open {
+    position: fixed;
+    height: 100%;
+    width: 90%;
+    top: 0;
+    z-index: 98;
+    left: 0;
+    font-size: 30px;
+    text-align: left;
+    background-color: rgb(111, 209, 214);
+    opacity: 0.9;
+    padding: 5%;
+    padding-top: 10%;
+    transition: 0.5s;
+  }
+  nav .sidebar_open .closebtn {
+    position: absolute;
+    top: 40px;
+    right: 25px;
+    font-size: 25px;
+    color: #1a1820;
+    border: none;
+    background: none;
+  }
 
-nav a:link {
-  color: white;
-}
-nav a:visited {
-  color: white;
+  nav .openbtn {
+    width: 100%;
+    height: 40px;
+    text-align: left;
+    color: #1a1820;
+    background-color: rgb(163, 212, 212);
+  }
+
+  .sidebar_open a {
+    text-decoration: none;
+    color: #1a1820;
+    padding-top: 20px;
+    display: block;
+    transition: 0.1s;
+  }
+  .nav_bar_sidebar {
+    position: fixed;
+    top: 0;
+    z-index: 99;
+    right: 0;
+    left: 0;
+  }
 }
