--- a/src/components/Intro/intro.css
+++ b/src/components/Intro/intro.css
@@ -7,17 +7,20 @@
     width: 100%+20px;
     padding-top: 3.5%;
     /* background-color: aquamarine; */
-    background-image: url("./images/tarun1.jpg");
+    background-image: url("./images/tarun3.png");
     background-size: 100% 100%;
     background-repeat: no-repeat;
+    background-color: rgb(194, 235, 171);
     /* background-attachment: fixed; */
   }
   .intro_page .brief {
+    display: grid;
+    place-items: center;
     text-align: justify;
     width: 100%;
-    padding-left: 20px;
-    padding-right: 22%;
-    padding-top: 10px;
+    padding-left: 5%;
+    padding-right: 35%;
+    padding-top: 10%;
   }
   .intro_page img {
     position: relative;
@@ -26,13 +29,22 @@
   }
 
   .intro_page .icon {
-    margin-left: 30%;
+    align-items: center;
+    position: relative;
     margin-right: 20%;
-    padding-top: 300px;
+    height: 30vh;
   }
   .intro_page .icon img {
     width: 60px;
     margin-left: 40px;
+  }
+  .intro_page .myname {
+    min-height: 20vh;
+    position: relative;
+  }
+  .intro_page .about_me {
+    min-height: 40vh;
+    position: relative;
   }
 }
 
@@ -40,23 +52,28 @@
   .intro_page {
     position: relative;
     padding-top: 25px;
+    max-width: 100vw;
   }
   .intro_page .brief {
     text-align: justify;
-    padding-top: 10px;
+    padding-top: 3%;
+    min-height: 87vh;
+  }
+  .intro_page .about_me {
+    align-items: center;
+    padding-bottom: 0;
   }
   .intro_page .icon {
     align-items: center;
-    padding-top: 50px;
-  }
-  .intro_page .icon img {
-    width: 60px;
-    margin-left: 20px;
+    padding-top: 10%;
   }
 }
-.myname {
-  font-family: belluga;
-  margin-bottom: 0;
+.intro_page .icon {
+  align-items: center;
+}
+.intro_page .icon img {
+  width: 60px;
+  margin-left: 20px;
 }
 
 .intro_page .blog_url {
@@ -65,4 +82,11 @@
   cursor: pointer;
   margin: 0;
   padding: 0;
+}
+.myname {
+  /* font-family: bradley hand, cursive; */
+  font-family: Lucida Handwriting, cursive;
+  font-family: segoe-script, cursive;
+  margin-bottom: 0;
+  letter-spacing: 0.1em; /* Adjust as needed */
 }
