--- a/src/components/skills/skills.css
+++ b/src/components/skills/skills.css
@@ -1,3 +1,15 @@
+@media screen and (min-width: 768px) {
+  .skills img {
+    width: 100%;
+  }
+}
+@media screen and (max-width: 768px) {
+  .skills img {
+    width: 50%;
+    margin-bottom: 20px;
+  }
+}
+
 .skills {
   background: rgba(54, 131, 162, 0.1); /*  40% opaque green */
   padding-top: 35px;
@@ -6,8 +18,6 @@
   padding-bottom: 0;
 }
 .skills img {
-  width: 100%;
-  /* box-shadow: 0 0 10px greenyellow; */
   animation: glow 1s infinite alternate;
 }
 
