Updated CSS, award image
Animation moved from JS to CSS

--- a/src/components/Education/education.css
+++ b/src/components/Education/education.css
@@ -35,3 +35,7 @@
 .education {
   background: rgba(54, 162, 54, 0.1); /*  40% opaque green */
 }
+.education .fade-in-left-to-right {
+  animation-delay: 0s;
+  animation: fade-in-left-to-right 3s ease-in-out infinite;
+}
