--- a/src/components/Layout/layout.css
+++ b/src/components/Layout/layout.css
@@ -15,3 +15,44 @@
     display: none;
   }
 }
+@keyframes typing {
+  0% {
+    width: 0;
+  }
+  /* 50% {
+    width: 0;
+  } */
+  100% {
+    width: 100%;
+  }
+}
+
+.typewriter {
+  overflow: hidden;
+  white-space: nowrap;
+  margin: 0 auto;
+  animation: typing 1.5s steps(40, end) forwards;
+  animation-delay: 0s;
+  width: 0; /* Set initial width to zero */
+  display: inline-block;
+  line-height: 1.5em; /* Add this line to adjust the line height */
+}
+
+@keyframes fade-in-left-to-right {
+  from {
+    mask-position: 100% 0;
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+    mask-position: 0 0;
+  }
+}
+
+.fade-in-left-to-right {
+  opacity: 0;
+  mask-size: 200% 100%;
+  mask-image: linear-gradient(to left, transparent 50%, black 50%);
+  animation: fade-in-left-to-right 3s ease-in-out forwards;
+  animation-delay: 3s;
+}
