--- a/src/components/Intro/intro.css
+++ b/src/components/Intro/intro.css
@@ -94,7 +94,7 @@
 }
 .myname {
   /* font-family: bradley hand, cursive; */
-  font-family: Lucida Handwriting, cursive;
+  /* font-family: Lucida Handwriting, cursive; */
   font-family: segoe-script, cursive;
   margin-bottom: 0;
   letter-spacing: 0.1em; /* Adjust as needed */
