--- a/src/components/Intro/intro.css
+++ b/src/components/Intro/intro.css
@@ -7,7 +7,7 @@
     width: 100%+20px;
     padding-top: 3.5%;
     /* background-color: aquamarine; */
-    background-image: url("./images/tarun3.png");
+    background-image: url("./images/tarun.png");
     background-size: 100% 100%;
     background-repeat: no-repeat;
     background-color: rgb(194, 235, 171);
