--- a/src/components/workexp/workexp.css
+++ b/src/components/workexp/workexp.css
@@ -1,5 +1,5 @@
 .workexp {
   position: relative;
   padding-top: 35px;
-  background: rgba(42, 31, 109, 0.1); /*  40% opaque green */
+  background: rgba(42, 31, 109, 0.1);
 }
