Data Science Journey, Routing added
- Added Data Science Journey
- Used Routing
- Use new URL navigation instead of state for the blog
- Added Franchise OCB Project
- Improved the workings

--- a/src/components/Intro/intro.css
+++ b/src/components/Intro/intro.css
@@ -86,11 +86,12 @@
 }
 
 .intro_page .blog_url {
+  text-decoration: underline;
   border: none;
   background: none;
   cursor: pointer;
   margin: 0;
-  padding: 0;
+  padding-top: 2%;
 }
 .myname {
   font-family: "Times New Roman", serif;
