--- a/src/components/DS_Journey/ds_journey.css
+++ b/src/components/DS_Journey/ds_journey.css
@@ -1,3 +1,20 @@
-.ds_journey {
+@media screen and (min-width: 768px) {
+  .ds_journey {
   text-align: justify;
+  padding: 20%;
+  margin-top: 20px;
+  padding-top: 3.5%;
+
 }
+
+}
+@media screen and (max-width: 768px) {
+  .ds_journey {
+    text-align: justify;
+    padding: 5%;
+    margin-top: 10px;
+    padding-top: 3.5%;
+  
+  }
+  
+  }
